--- a/extension/Base.lproj/SafariExtensionViewController.xib
+++ b/extension/Base.lproj/SafariExtensionViewController.xib
@@ -15,12 +15,14 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="c22-O7-iKe">
-            <rect key="frame" x="0.0" y="0.0" width="330" height="22"/>
+            <rect key="frame" x="0.0" y="0.0" width="330" height="24"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <searchField wantsLayer="YES" focusRingType="none" verticalHuggingPriority="750" fixedFrame="YES" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rnR-2m-fJL">
-                    <rect key="frame" x="0.0" y="0.0" width="330" height="22"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                <searchField wantsLayer="YES" focusRingType="none" verticalHuggingPriority="750" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rnR-2m-fJL">
+                    <rect key="frame" x="0.0" y="2" width="330" height="22"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="22" id="gIP-oe-KbH"/>
+                    </constraints>
                     <searchFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" borderStyle="bezel" focusRingType="none" bezelStyle="round" sendsSearchStringImmediately="YES" maximumRecents="10" id="3iA-xq-9E4">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -30,15 +32,14 @@
                         <action selector="searchPassword:" target="-2" id="NVc-yn-i2V"/>
                     </connections>
                 </searchField>
-                <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hEo-1O-ZXu">
-                    <rect key="frame" x="0.0" y="0.0" width="330" height="0.0"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                    <clipView key="contentView" ambiguous="YES" id="7nw-vt-33O">
-                        <rect key="frame" x="1" y="1" width="328" height="1"/>
+                <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hEo-1O-ZXu">
+                    <rect key="frame" x="0.0" y="0.0" width="330" height="2"/>
+                    <clipView key="contentView" id="7nw-vt-33O">
+                        <rect key="frame" x="1" y="1" width="328" height="0.0"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" viewBased="YES" id="4gY-te-H9m">
-                                <rect key="frame" x="0.0" y="0.0" width="328" height="1"/>
+                                <rect key="frame" x="0.0" y="0.0" width="328" height="0.0"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
                                 <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -71,6 +72,16 @@
                     </scroller>
                 </scrollView>
             </subviews>
+            <constraints>
+                <constraint firstItem="rnR-2m-fJL" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" id="6Iu-LL-9bb"/>
+                <constraint firstItem="hEo-1O-ZXu" firstAttribute="bottom" secondItem="c22-O7-iKe" secondAttribute="bottom" id="BCa-Vl-vrt"/>
+                <constraint firstItem="rnR-2m-fJL" firstAttribute="trailing" secondItem="c22-O7-iKe" secondAttribute="trailing" id="XgE-vY-2sA"/>
+                <constraint firstItem="hEo-1O-ZXu" firstAttribute="top" secondItem="rnR-2m-fJL" secondAttribute="bottom" id="fli-6y-NVr"/>
+                <constraint firstItem="hEo-1O-ZXu" firstAttribute="leading" secondItem="rnR-2m-fJL" secondAttribute="leading" id="imK-2v-yBd"/>
+                <constraint firstItem="rnR-2m-fJL" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" id="iqd-Wl-UOC"/>
+                <constraint firstItem="rnR-2m-fJL" firstAttribute="centerX" secondItem="c22-O7-iKe" secondAttribute="centerX" id="jIu-UM-04z"/>
+                <constraint firstItem="hEo-1O-ZXu" firstAttribute="centerX" secondItem="c22-O7-iKe" secondAttribute="centerX" id="zYr-Bc-uTE"/>
+            </constraints>
             <point key="canvasLocation" x="139" y="153"/>
         </customView>
     </objects>
